added tabBar and ApiNews

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -13,6 +13,8 @@
   "search": "ابحث",
   "english": "الانجليزيه",
   "arabic": "العربيه",
-  "language": "اللغه"
+  "language": "اللغه",
+  "something_went_wrong": "حدث خطأ",
+  "try_again": "حاول لاحقا"
 
 }
