--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -13,6 +13,8 @@
   "search": "Search",
   "english": "English",
   "arabic": "Arabic",
-  "language": "Language"
+  "language": "Language",
+  "something_went_wrong": "Something went wrong",
+  "try_again": "Try Again"
 
 }
