added category and drawer

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,6 +15,7 @@
   "arabic": "Arabic",
   "language": "Language",
   "something_went_wrong": "Something went wrong",
-  "try_again": "Try Again"
+  "try_again": "Try Again",
+  "technology": "Technology"
 
 }
