--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -15,6 +15,8 @@
   "arabic": "العربيه",
   "language": "اللغه",
   "something_went_wrong": "حدث خطأ",
-  "try_again": "حاول لاحقا"
+  "try_again": "حاول لاحقا",
+  "technology": "تكنولوجيا"
+
 
 }
