added newsDescription and search

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -16,7 +16,11 @@
   "language": "اللغه",
   "something_went_wrong": "حدث خطأ",
   "try_again": "حاول لاحقا",
-  "technology": "تكنولوجيا"
+  "technology": "تكنولوجيا",
+  "view_full_article": "عرض المقال كاملا",
+  "general": "عام"
+
+
 
 
 }
