--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,6 +16,8 @@
   "language": "Language",
   "something_went_wrong": "Something went wrong",
   "try_again": "Try Again",
-  "technology": "Technology"
+  "technology": "Technology",
+  "view_full_article": "View Full Article",
+  "general": "General"
 
 }
